--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install dependencies and build
         run: |
           npm ci
-          npm run build -- --prod --base-href /your-repo-name/
+          npm run build -- --prod --base-href /angular-introduction/
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.5
