--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,11 +20,11 @@ jobs:
       - name: Install dependencies and build
         run: |
           npm install
-          npm run build -- --prod --base-href /angular-introduction/
+          npm run build
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
           branch: gh-pages
-          folder: dist/your-repo-name
+          folder: dist/angular-introduction
           clean: true
